--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ div span{
     background-color: black;
     font-size: 50px;
     height: 1000px;
+    width: 100vw
     
 }
 
@@ -101,10 +102,12 @@ div span{
     justify-content: space-between
 }
 
-#menu p {
-    margin-top: 15vh;
+.player {
+    margin-top: 5vh;
     color: white;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 50px;
+    font-size: 30px;
     text-align: center;
+    
 }
+
